--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
 
-jaredatandi <jaredatandi07@gmail.com>
-Keago <69952904+jaredatandi@users.noreply.github.com>
+Slittvillain <sbusisocjwara@gmail.com>
